tests/positive/BuiltinsMultiImport/A.mjuvix
module A;

import Nat;

end;
