tests/negative/ImportCycle/D.mjuvix
module D;

import B;

end;
